--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 { 
-	"token": "OTMxNzI0MDQzODg1ODk5ODE4.YeIlog.HOAtyE4x5zhnHIwdhpJGc40dXIM" ,
-    "clientId" : "931724043885899818",
-    "guildId" : "931564393785880577",
-    "covidApi": "GUL2x6d7SMlTRHgVQf8CYowWAzNrm41cI"
+	"token": "" ,
+    "clientId" : "",
+    "guildId" : "",
+    "covidApi": ""
 }
